# remla_so

./: .dockerignore  .dvcignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.drift-monitor  Dockerfile.model-api  Dockerfile.monitor  Dockerfile.scraper  Dockerfile.so-agent  Predict tags on StackOverflow with linear models.ipynb  README.md  README.rst  dvc.yaml  dvc.yml  k8.yml  k8s.yml  k8s2.yml  k8s_deprecated.yml  postgres-values.yml  pyproject.toml  requirements.txt  tests-report.xml
.dvc/: config
.github/workflows/: dvc.yml  pytest.yml  release.yml
code/: conf.py  eval.py  get_data.py  load_data.py  model.py  preprocess.py  preprocess_data.py  serve.py  serve_model.py  train_classifier.py  transform_data.py  utils.py
data/: raw.dvc  test.joblib
data/processed/: .gitignore
drift_monitor/: drift_monitor.py  main.py
lib/: __init__.py  conf.py  model.py  preprocess.py  utils.py
model_api/: main.py
output/: BagOfWords.json  TFIDF.json
output/data/: .gitignore  anomalies_validation.txt  stats_train.txt  stats_validation.txt  tfdv_test.txt  tfdv_train.txt  train.txt  validation.txt
output/models/: .gitignore  BagOfWords.joblib
pipeline/: gen_schema.py  preprocess.py  train.py  validate.py
prometheus/: Dockerfile
reports/: tests.xml
scraper/: Dockerfile  extensions.py  items.py  pipelines.py  pyproject.toml  settings.py
scraper/scraper/: extensions.py  settings.py
scraper/scraper/spiders/: questions_spider.py  spider.py
scraper/spiders/: spider.py
scraper/tutorial/: file.csv  quotes-stackoverflow.com.html
scraper/tutorial/tutorial/: settings.py
scraper/tutorial/tutorial/spiders/: quotes_spider.py
scraper_old/: items.py  settings.py
so_agent/: main.py
src/: __init__.py  conf.py  drift-monitor.py  eval.py  gen_schema.py  get_data.py  load_data.py  model.py  preprocess.py  preprocess_data.py  requirements.txt  serve_model.py  service.py  train.py  train_classifier.py  transform_data.py  utils.py  validate.py
src/tests/: test_preprocess.py  test_transform.py
tests/: test_code.py  test_preprocess.py  test_service.py  test_store.py  test_transform.py
tests/lib/: test_model.py  test_preprocess.py  test_util.py
tests/model-api/: test_service.py
