[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Johannes Koch <j.koch@student.tudelft.nl>",
"Julian Bieshuevel <jpbiesheuvel@student.tudelft.nl>",
"Andrew Huang <a.s.huang@student.tudelft.nl>",
"Ratish Thakoersingh <r.k.thakoersingh@student.tudelft.nl>"]

[tool.poetry.dependencies]
python = ">= 3.8,<3.10"
numpy = "^1.22.3"
sklearn = "^0.0"
pandas = "^1.4.2"
pydantic = "^1.9.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
nltk = "^3.7"
tqdm = "^4.64.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
mllint = "^0.12.1"
pylint = "^2.13.9"
mypy = "^0.950"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
bandit = "^1.7.4"
dvc = "^2.10.2"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mllint.testing]
report = ""

[tool.mllint.testing.coverage]
report = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
